# FusorSim

./: .gitignore  CMakeLists.txt  Makefile.impl  README.md
inc/lib/: locate.h  real_v.h  sim.h
inc/lib/gpu/: repeat_iterator.h
inc/src/: nbody.h
include/lib/: locate.h  sim.h
include/src/: nbody.h
lib/: CMakeLists.txt
lib/cpu/: 2body.cc  nbody.cc
lib/gpu/: nbody.cu
scripts/: detectgpu.cu
src/: CMakeLists.txt  nbody.cc
src/two-body/: Makefile  main2b.cc  main2b.h  two_body.cu  two_body.h
