if(${CUDA_ARCH_RET} EQUAL 0)
  AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/gpu sim_src)
else()
  AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/cpu sim_src)
endif()
add_library(sim STATIC ${sim_src})
set_property(TARGET sim PROPERTY CXX_STANDARD 17)
target_include_directories(sim PUBLIC ${CMAKE_SOURCE_DIR}/inc/lib)
